--- a/terminal/index.html
+++ b/terminal/index.html
@@ -1,2 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unixluxury</title>
+    <link rel="stylesheet" href="CSS/global.css" type="text/css">
+    <link rel="stylesheet" href="CSS/main.css" type="text/css">
+</head>
+<body>
+    <header id="cabecera">
+        <div id="menu">
+            <div id="logo"> 
+                <img src="IMG/uniq.png">
+                <img src="IMG/luxury.png">
+            </div>
+            <div id="longin">Long In | Sing up </div>
+            <div id="esp">ESP | ENG</div>  
+            <div is="menuconsulta">
+            <img src="IMG/Group 254.png" alt="">
+            </div>
+        </div>
+    </header></body>
+</html>
 
