terminado con transiciones

--- a/terminal/index.html
+++ b/terminal/index.html
@@ -59,10 +59,21 @@
 
         <section id="contenedor">
           <div id="galerizfotos">
-            <img class="galeria1" src="IMG/mask11.jpg">
-            <img class="galeria1" src="IMG/mask13.png">
-            <img class="galeria1" src="IMG/Maskg1.jpg">
+            <div class="galeriafot1">
+              <img class="galeria1" src="IMG/mask11.jpg">
+            <span class="tituloimg"> <img src="IMG/castillo.png"> France</span>
+            <span class="subtituloimg"> Marseilles</span>
+            </div>
+            <div class="galeriafot1">
+              <img class="galeria1" src="IMG/mask13.png">
+              <span class="tituloimg">England</span>
+              <span class="subtituloimg"> Glasgow </p></span>
+            </div>
+            <div class="galeriafot1">
+              <img class="galeria1" src="IMG/Maskg1.jpg">
+            </div>
           </div>
+
           <div id="galeriaizq">
               <p class="titulo">Worldwide gallery</p>
               <p class="subtitulo">Properties for sale</p>
@@ -89,8 +100,16 @@
             </div>
           </div>
           <div id="galeriafotos2">
-            <img class="galeria2" src="IMG/im2.png">
+            <div class="galeriafot2"> 
+               <img class="galeria2" src="IMG/im2.png">
+              <span class="tituloimg"> France</span>
+              <span class="subtituloimg"> Carcassonne</span>
+            </div>
+          <div class="galeriafot2">
             <img class="galeria2" src="IMG/mask14.jpg">
+            <span class="tituloimg"> Germany</span>
+            <span class="subtituloimg"> Munich </span>
+          </div class="galeriafot2">         
             <img class="galeria2" src="IMG/Mask3.jpg">
           </div>
         </section>
@@ -151,15 +170,15 @@
               <div><img class="galeria5"  src="IMG/logoizquierda.png" ></div>
             </div>
               <p class="titulo4">Services</p>
-              <p class="subtitulo4">Art Curation & 
+              <p class="subtitulo4">Art Curation & <br>
                 Interior Design</p>
-              <p class="contenido1">In an ultimate jetsetter location or a forever home, our experts have the expertise it takes to knowledgeably advise you at every stage of the property cycle.</p>
+              <p class="contenido1">In an ultimate jetsetter location or a forever home, <br> our experts have the expertise it takes to <br> knowledgeably advise you at every stage of <br> the property cycle.</p>
             <div id="botongaleria">
               <img class="linea1" src="IMG/lineader.png">
               <a class="Prev" href="#">Prev</a>
               <a class="primer_boton1" href="#">  Contact us    </a>
               <a class="next" href="#">Next</a>
-              <img class="linea2"src="IMG/lineizq.png">
+              <img class="linea3"src="IMG/lineizq.png">
             </div>
           </div>
         </section>
