terminada media queries 1

--- a/terminal/index.html
+++ b/terminal/index.html
@@ -173,12 +173,12 @@
               <p class="subtitulo4">Art Curation & <br>
                 Interior Design</p>
               <p class="contenido1">In an ultimate jetsetter location or a forever home, <br> our experts have the expertise it takes to <br> knowledgeably advise you at every stage of <br> the property cycle.</p>
-            <div id="botongaleria">
-              <img class="linea1" src="IMG/lineader.png">
-              <a class="Prev" href="#">Prev</a>
-              <a class="primer_boton1" href="#">  Contact us    </a>
-              <a class="next" href="#">Next</a>
-              <img class="linea3"src="IMG/lineizq.png">
+            <div id="botongaleria4">
+              <img class="linea5" src="IMG/lineader.png">
+              <a class="Prev3" href="#">Prev</a>
+              <a class="primer_boton3" href="#">  Contact us    </a>
+              <a class="next4" href="#">Next</a>
+              <img class="linea6" src="IMG/lineizq.png" >
             </div>
           </div>
         </section>
