--- a/terminal/index.html
+++ b/terminal/index.html
@@ -12,7 +12,6 @@
         <nav>
             <a href="#">
               <img id="logo" src="IMG/uniq.png"/>
-              <img id="logo1"  src="IMG/luxury.png" >
               <img id="mobile" src="IMG/logopeque.png" />
             </a>
             <div class="nav-links">
@@ -61,13 +60,16 @@
           <div id="galerizfotos">
             <div class="galeriafot1">
               <img class="galeria1" src="IMG/mask11.jpg">
-            <span class="tituloimg"> <img src="IMG/castillo.png"> France</span>
-            <span class="subtituloimg"> Marseilles</span>
+            <div class="nombrefotos">
+              <img src="IMG/castillo.png">
+              <span class="tituloimg">  France</span>
+               <span class="subtituloimg"> Marseilles</span>
+          </div> 
             </div>
             <div class="galeriafot1">
               <img class="galeria1" src="IMG/mask13.png">
-              <span class="tituloimg">England</span>
-              <span class="subtituloimg"> Glasgow </p></span>
+              <div class="nombrefotos"><span class="tituloimg">England</span>
+                <span class="subtituloimg"> Glasgow </p></span></div>
             </div>
             <div class="galeriafot1">
               <img class="galeria1" src="IMG/Maskg1.jpg">
@@ -102,13 +104,15 @@
           <div id="galeriafotos2">
             <div class="galeriafot2"> 
                <img class="galeria2" src="IMG/im2.png">
-              <span class="tituloimg"> France</span>
-              <span class="subtituloimg"> Carcassonne</span>
+              <div class="nombrefotos"><span class="tituloimg"> France</span>
+              <span class="subtituloimg"> Carcassonne</span></div>
             </div>
           <div class="galeriafot2">
             <img class="galeria2" src="IMG/mask14.jpg">
-            <span class="tituloimg"> Germany</span>
-            <span class="subtituloimg"> Munich </span>
+            <div class="nombrefotos"> 
+                <span class="tituloimg"> Germany</span>
+                <span class="subtituloimg"> Munich </span>
+            </div>
           </div class="galeriafot2">         
             <img class="galeria2" src="IMG/Mask3.jpg">
           </div>
@@ -165,7 +169,7 @@
           <div id="galeria4">
             <img class="galeria4" src="IMG/transparente.png">
           </div>
-          <div id="galeriaizq">
+          <div id="galeriaizq2">
             <div id="logoizquierda">
               <div><img class="galeria5"  src="IMG/logoizquierda.png" ></div>
             </div>
