--- a/terminal/index.html
+++ b/terminal/index.html
@@ -49,9 +49,10 @@
         <div id="follow">
           <img src="IMG/FOLLOW.png">
           <img src="IMG/2.png" >
+          <img src="IMG/Group.png" >
+          <img src="IMG/x.png" alt="">
           <img src="IMG/face.png" alt="">
           <img src="IMG/instag.png" alt="">
-          <img src="IMG/x.png" alt="">
           <img src="IMG/youtube.png" alt="">
         </div>  
         </Section>
@@ -92,7 +93,7 @@
             <div id="galeriaizq">
               <p class="titulo2">Worldwide gallery</p>
               <p class="subtitulo2">Properties for rent</p>
-              <p class="contenido"> In an ultimate jetsetter location or a forever home, our experts have the expertise it takes to knowledgeably advise you at every stage of the property cycle.</p>
+              <p class="contenido"> In an ultimate jetsetter location or a forever home, our experts <br> have the expertise it takes to knowledgeably advise you at every <br>stage of the property cycle.</p>
             <div id="botongaleria1">
               <img class="linea2" src="IMG/lineader.png">
               <a class="Prev1" href="#">Prev</a>
